--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,24 +1,59 @@
 body{
+    color: #40514E;
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
 }
 
 h1{
+    color: #66BFBF;
     margin:0;
     font-family: 'Sacramento', cursive;
     margin-top: 50px auto 0 auto;
     font-size: 5.625rem;
+    line-height: 2;
 
 }
 
+p{
+    line-height: 2;
+}
+
+hr{
+    border:dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+}
 h2{
+    color: #66BFBF;
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
+    font-weight: normal;
+    padding-bottom: 10px;
 }
 
 h3{
+    color: #11999E;
     font-family: 'Montserrat', sans-serif;
+}
+
+a{
+    color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+
+}
+
+a:hover{
+    color: #EAF6F6;
+}
+
+.copyright{
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
 }
 .top-container{
     background-color: #E4F9F5;
@@ -31,43 +66,104 @@ h3{
 }
 
 .middle-container{
-    /* background-color: aquamarine; */
-    /* height: 200px;
-    width: 200px; */
-    /* border: solid 20px;
-    margin-left: 260px; */
+    margin: 100px 0;
 }
 
 .bottom-container{
-    /* background-color: beige; */
-    /* height: 200px;
-    width: 200px; */
-    /* border: solid 10px;
-    margin-left: 500px; */
+    background-color: #66BFBF;
+    padding: 50px 0 20px;
 }
 
 .pro{
     text-decoration: underline;
 }
 
+.intro{
+    width: 30%;
+    margin: auto;
+}
+
 .top-cloud{
     position: absolute;
     right: 300px;
-    top: 50px;
+    top: 40px;
 
 }
 
 .bottom-cloud{
     position: absolute;
-    left: 300px;
+    left: 250px;
     bottom: 300px;
 }
 
 .pic{
     border-radius: 100%;
-    height: 100px;
-    width: 100px;
+    height: 25%;
+    width: 25%;
 }
+
+.pic-sci{
+    border-radius: 100%;
+    height: 30%;
+    width: 30%;
+    float: left;
+    margin-right: 30px;
+}
+
+.pic-graph{
+    border-radius: 100%;
+    height: 30%;
+    width: 30%;
+    float: right;
+    margin-left: 30px;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto; /* top-left-bottom-right */
+    text-align: left;
+    line-height: 2;
+}
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+.btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+}
+
+.contact-message{
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+/* .sdlc-description{
+    clear: right;
+}
+
+.backdev-description{
+    clear: left;
+} */
 /* .one{
     background-color: red;
     height: 200px;
