--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -1,6 +1,6 @@
-body{
-    font-family: "Montserrat";
-}
+/* body{
+    font-family: "Montserrat", sans-serif;
+} */
 
 #title{
     background-color: #ff4c68;
@@ -11,6 +11,23 @@ h1{
     font-family: "Montserrat-Black",sans-serif;
     font-size: 3.5rem;
     line-height: 1.5;
+}
+
+h2{
+    font-family: "Monserrat-Bold", sans-serif;
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+h3{
+    font-family: "Monserrat-Bold", sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+p{
+    color: #8f8f8f;
 }
 
 .container-fluid{
@@ -49,4 +66,52 @@ h1{
 .title-image{
     width: 60%;
     transform: rotate(25deg);
+}
+
+/* Feature Section */
+
+#features{
+    padding: 7% 15%;
+}
+
+.feature-box{
+    text-align: center;
+    padding: 5%;
+}
+
+.icon{
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.icon:hover{
+    color: #ff4c68;
+}
+
+/* Testimonials section */
+
+#testimonials{
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+
+}
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+
+}
+
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px;
 }
