--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -1,37 +1,47 @@
-/* body{
-    font-family: "Montserrat", sans-serif;
-} */
-
-#title{
-    background-color: #ff4c68;
-    color: #fff;
+body{
+    font-family: "Montserrat";
+    text-align: center;
 }
 
-h1{
-    font-family: "Montserrat-Black",sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
-}
+/* title section */
 
-h2{
+
+
+h1, h2, h3, h4, h5, h6{
     font-family: "Monserrat-Bold", sans-serif;
-    font-weight: bold;
-    font-size: 3rem;
-    line-height: 1.5;
-}
-
-h3{
-    font-family: "Monserrat-Bold", sans-serif;
-    font-weight: bold;
-    font-size: 1.5rem;
 }
 
 p{
     color: #8f8f8f;
 }
 
+/* heading */
+
+.big-heading{
+    font-family: "Montserrat-Black",sans-serif;
+    font-size: 3.5rem;
+    line-height: 1.5;
+    font-weight: bold;
+}
+
+.section-heading{
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+/* containers */
+
 .container-fluid{
-    padding: 3% 15% 7%;
+    padding: 7% 15%;
+}
+
+.colored-section{
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+.white-section{
+    background-color: #fff;
 }
 
 /* Navigation Bar */
@@ -63,8 +73,13 @@ p{
 
 /* Title image */
 
+#title .container-fluid{
+    padding: 3% 15% 7%;
+    text-align: left;
+}
+
 .title-image{
-    max-width: 20%;
+    width: 20%;
     transform: rotate(25deg);
     position: absolute;
     right: 30%;
@@ -77,14 +92,16 @@ p{
 /* Feature Section */
 
 #features{
-    padding: 7% 15%;
-    background-color: #fff;
+
     position: relative;
     z-index: 1;
 }
+.feature-title{
+    font-weight: bold;
+    font-size: 1.5rem;
+}
 
 .feature-box{
-    text-align: center;
     padding: 4.5%;
 }
 
@@ -100,10 +117,12 @@ p{
 /* Testimonials section */
 
 #testimonials{
-    text-align: center;
     background-color: #ef8172;
-    color: #fff;
+}
 
+.testimonial-text{
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .testimonial-image{
@@ -114,7 +133,6 @@ p{
 
 #press{
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 
 }
@@ -124,9 +142,6 @@ p{
     margin: 20px 20px 50px;
 }
 
-.carousel-item{
-    padding: 7% 15%;
-}
 
 /* Pricing section */
 
@@ -134,9 +149,13 @@ p{
     width: 100%;
 }
 
+.price-text{
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 #pricing{
     padding: 100px;
-    text-align: center;
 }
 
 .pricing-column{
@@ -145,4 +164,37 @@ p{
 
 .head-h3{
     font-weight: 1000;
+}
+
+/* cta section */
+
+#cta{
+    background-color: #ff4c68;
+}
+
+
+/* footer section */
+
+#footer{
+    background-color: #fff;
+}
+
+.social-icon{
+    margin: 20px 10px;
+}
+
+@media (max-width: 1108px){
+
+
+    .title-image{
+        width: 60%;
+        position: static;
+        transform: rotate(0);
+    }
+}
+
+@media (max-width:1077px){
+    #title{
+        text-align: center;
+    }
 }
